My working configs with many ID changes
-my working configs as of 9/2/2013 9am with 108 mods.
-I didn't feel like changing each ID conflict from a fresh copy of
configs generated. So I commited my copy of configs to view the changes.

--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -47,7 +47,7 @@ appeng {
     ####################
 
     vesionchecker {
-        S:lastStarted=hl3uaphb
+        S:lastStarted=hl3rcw3d
     }
 
 }
@@ -61,7 +61,7 @@ appeng {
 ####################
 
 block {
-    I:appeng.TinyTNT=3970
+    I:appeng.TinyTNT=2837
     I:appeng.blockMulti=3985
     I:appeng.blockMulti2=3982
     I:appeng.blockMulti3=3979
