--- a/config/Metallurgy3/MetallurgyUtility.cfg
+++ b/config/Metallurgy3/MetallurgyUtility.cfg
@@ -1,11 +1,24 @@
 # Configuration file
 
 ####################
-# !enable
+# "!enable"
 ####################
 
-"!enable" {
+""!enable"" {
     B:"Enable Utility Set"=true
+    ####################
+    # "enable metals"
+    ####################
+
+    ""enable metals"" {
+        B:"Enable Bitumen"=true
+        B:"Enable Magnesium"=true
+        B:"Enable Phosphorite"=true
+        B:"Enable Potash"=true
+        B:"Enable Saltpeter"=true
+        B:"Enable Sulfur"=true
+    }
+
     ####################
     # enable metals
     ####################
@@ -23,10 +36,10 @@
 
 
 ####################
-# #block ids
+# "#block ids"
 ####################
 
-"#block ids" {
+""#block ids"" {
     S:"Bitumen Ore"=905:11
     S:"Magnesium Ore"=905:10
     S:"Phosphorite Ore"=905:8
@@ -50,10 +63,10 @@ bitumen {
     }
 
     ####################
-    # world gen
+    # "world gen"
     ####################
 
-    "world gen" {
+    ""world gen"" {
         S:Diminsions=0 2-100000
         I:"Max Height"=128
         I:"Min Height"=0
@@ -100,10 +113,10 @@ magnesium {
     }
 
     ####################
-    # world gen
+    # "world gen"
     ####################
 
-    "world gen" {
+    ""world gen"" {
         S:Diminsions=0 2-100000
         I:"Max Height"=128
         I:"Min Height"=0
@@ -130,10 +143,10 @@ phosphorite {
     }
 
     ####################
-    # world gen
+    # "world gen"
     ####################
 
-    "world gen" {
+    ""world gen"" {
         S:Diminsions=0 2-100000
         I:"Max Height"=128
         I:"Min Height"=0
@@ -160,10 +173,10 @@ potash {
     }
 
     ####################
-    # world gen
+    # "world gen"
     ####################
 
-    "world gen" {
+    ""world gen"" {
         S:Diminsions=0 2-100000
         I:"Max Height"=128
         I:"Min Height"=0
@@ -203,10 +216,10 @@ saltpeter {
     }
 
     ####################
-    # world gen
+    # "world gen"
     ####################
 
-    "world gen" {
+    ""world gen"" {
         S:Diminsions=0 2-100000
         I:"Max Height"=128
         I:"Min Height"=0
@@ -233,10 +246,10 @@ sulfur {
     }
 
     ####################
-    # world gen
+    # "world gen"
     ####################
 
-    "world gen" {
+    ""world gen"" {
         S:Diminsions=0 2-100000
         I:"Max Height"=128
         I:"Min Height"=0
