--- a/config/MiscPeripherals.cfg
+++ b/config/MiscPeripherals.cfg
@@ -46,6 +46,18 @@ features {
     # Enable the Hardware Accelerator peripheral
     B:enableAccelerator=true
 
+    # Enable the Computer Engineer's Backpacks
+    B:enableBackpacks=true
+
+    # Enable the Barrel turtle upgrade
+    B:enableBarrel=true
+
+    # Enable the Bee Analyzer peripheral
+    B:enableBeeAnalyzer=true
+
+    # Enable the Butterfly Analyzer peripheral
+    B:enableButterflyAnalyzer=true
+
     # Enable the Charge Station block
     B:enableChargeStation=true
 
@@ -85,17 +97,47 @@ features {
     # Enable the Firework Launcher peripheral
     B:enableFireworkLauncher=true
 
+    # Enable the Gate Reader peripheral and turtle upgrade
+    B:enableGateReader=true
+
+    # Enable the Grafter turtle upgrade
+    B:enableGrafter=true
+
+    # Enable the HV Solar turtle upgrade
+    B:enableHVSolar=true
+
     # Enable the Interactive Sorter peripheral
     B:enableInteractiveSorter=true
 
     # Enable the Inventory turtle upgrade
     B:enableInventory=true
 
+    # Enable the LV Solar turtle upgrade
+    B:enableLVSolar=true
+
+    # Enable the Laser turtle upgrade
+    B:enableLaser=true
+
+    # Enable the ME Bridge peripheral
+    B:enableMEBridge=true
+
+    # Enable the MV Solar turtle upgrade
+    B:enableMVSolar=true
+
     # Enable the Iron Note Block peripheral and turtle upgrade
     B:enableNote=true
 
+    # Enable the Ore Scanner turtle upgrade
+    B:enableODScanner=true
+
+    # Enable the Advanced Ore Scanner turtle upgrade
+    B:enableOVScanner=true
+
     # Enable the Player Detector peripheral
     B:enablePlayerDetector=true
+
+    # Enable the REther turtle upgrade
+    B:enableREther=true
 
     # Enable the RTG turtle upgrade
     B:enableRTG=true
@@ -109,14 +151,23 @@ features {
     # Enable the Resupply Station and Resupply turtle upgrade
     B:enableResupply=true
 
+    # Enable the Scoop turtle upgrade
+    B:enableScoop=true
+
     # Enable the Shears turtle upgrade
     B:enableShears=true
 
     # Enable the Sign Reader turtle upgrade
     B:enableSignReader=true
 
+    # Enable the Electronic Signal Controller peripheral
+    B:enableSignalController=true
+
     # Enable the Smallnet Sender peripheral
     B:enableSmSender=true
+
+    # Enable the Solar turtle upgrade
+    B:enableSolar=true
 
     # Enable the Speaker peripheral and turtle upgrade
     B:enableSpeaker=true
@@ -129,6 +180,15 @@ features {
 
     # Enable the Advanced Turtle Teleporter
     B:enableTeleporterT2=true
+
+    # Enable the Tool Builder turtle upgrade
+    B:enableToolBuilder=true
+
+    # Enable the Tree Analyzer peripheral
+    B:enableTreeAnalyzer=true
+
+    # Enable the Treetap turtle upgrade
+    B:enableTreetap=true
 
     # Enable the XP and Anvil turtle upgrades
     B:enableXP=true
@@ -176,6 +236,12 @@ general {
 item {
     # ID for the first item
     I:alpha=31735
+
+    # ID for the Computer Engineer's Backpack
+    I:backpack=31732
+
+    # ID for the Woven Computer Engineer's Backpack
+    I:backpackT2=31731
 
     # ID for the minecart item
     I:cart=31733
