--- a/config/ProjectRed.cfg
+++ b/config/ProjectRed.cfg
@@ -5,9 +5,14 @@
 ####################
 
 block {
+    I:block_gateID=2147
+    I:block_lanternID=2130
+    I:block_lightingID=2128
     I:block_machinesID=2129
+    I:block_microID=2145
     I:block_oresID=2130
     I:block_stonesID=2131
+    I:block_wireID=2146
 }
 
 
@@ -35,13 +40,13 @@ item {
     I:goldsickle=9124
     I:ironsaw=9115
     I:ironsickle=9123
-    I:item_backpackID=31726
-    I:item_componentsID=31729
-    I:item_drawplateID=31728
-    I:item_screwdriverID=31730
-    I:item_turbineID=31725
-    I:item_wireDebuggerID=31724
-    I:item_woolginID=31727
+    I:item_backpackID=31711
+    I:item_componentsID=31724
+    I:item_drawplateID=31725
+    I:item_screwdriverID=31729
+    I:item_turbineID=31728
+    I:item_wireDebuggerID=31730
+    I:item_woolginID=31712
     I:peridotaxe=9099
     I:peridothoe=9102
     I:peridotpickaxe=9105
@@ -89,13 +94,13 @@ modules {
 ####################
 
 "multipart item ids" {
-    I:"Gate Part ID"=9030
-    I:"Inverted Lamp Part ID"=9036
-    I:"Inverted Lantern Part ID"=9034
-    I:"Jacketed Wire Part ID"=9032
-    I:"Lamp Part ID"=9035
-    I:"Lantern Part ID"=9033
-    I:"Wire Part ID"=9031
+    I:"Gate Part ID"=3602
+    I:"Inverted Lamp Part ID"=3608
+    I:"Inverted Lantern Part ID"=3606
+    I:"Jacketed Wire Part ID"=3604
+    I:"Lamp Part ID"=3607
+    I:"Lantern Part ID"=3605
+    I:"Wire Part ID"=3603
 }
 
 
