--- a/config/RopesPlus.cfg
+++ b/config/RopesPlus.cfg
@@ -31,10 +31,10 @@ arrowconfig {
 
 
 ####################
-# arrows enabled
+# "arrows enabled"
 ####################
 
-"arrows enabled" {
+""arrows enabled"" {
     B:"Confusing Arrow"=true
     B:"Dirt Arrow"=true
     B:"Exploding Arrow"=true
@@ -77,22 +77,22 @@ general {
 ####################
 
 item {
-    I:itemIdArrowConfusion=31720
-    I:itemIdArrowDirt=31719
-    I:itemIdArrowExplosion=31718
-    I:itemIdArrowFire=31717
-    I:itemIdArrowGrass=31716
-    I:itemIdArrowIce=31715
-    I:itemIdArrowLaser=31714
-    I:itemIdArrowRope=31713
-    I:itemIdArrowSlime=31712
-    I:itemIdArrowTorch=31711
+    I:itemIdArrowConfusion=31722
+    I:itemIdArrowDirt=31721
+    I:itemIdArrowExplosion=31720
+    I:itemIdArrowFire=31719
+    I:itemIdArrowGrass=31718
+    I:itemIdArrowIce=31717
+    I:itemIdArrowLaser=31716
+    I:itemIdArrowRope=31715
+    I:itemIdArrowSlime=31714
+    I:itemIdArrowTorch=31713
     I:itemIdArrowWarp=31710
-    I:itemIdGrapplingHook=31722
+    I:itemIdGrapplingHook=31726
     I:itemIdHookShot=31709
     I:itemIdHookshotCartridge=31708
-    I:itemIdRope=31723
-    I:itemIdRopesPlusBow=31721
+    I:itemIdRope=31727
+    I:itemIdRopesPlusBow=31723
 }
 
 
