--- a/config/immibis.cfg
+++ b/config/immibis.cfg
@@ -5,7 +5,7 @@
 ####################
 
 block {
-    I:liquidxp.machine.id=4084
+    I:liquidxp.machine.id=4085
 }
 
 
@@ -15,6 +15,7 @@ block {
 
 general {
     B:autoAssign=false
+    B:enableTPSCommand=true
     B:liquidxp.destroyXPOverflow=false
     I:liquidxp.millibucketsPerXPPoint=25
     B:liquidxp.onlyEnchantBooks=true
