--- a/config/AtomicScience.cfg
+++ b/config/AtomicScience.cfg
@@ -39,6 +39,7 @@ general {
     B:"Allow Toxic Waste"=true
     B:"Allow Uranium Ore Dictionary Compatiblity"=true
     B:"Auto Disable Uranium If Exist"=false
+    B:"Disable IC2 Uranium Compression (Recommended)"=true
     B:"Disable Radiation"=false
     D:"Steam Ratio"=650.0
     D:"Turbine Output Multiplier"=20.0
