--- a/config/Basic Components.cfg
+++ b/config/Basic Components.cfg
@@ -12,8 +12,14 @@ crafting {
     B:"Allow item.basiccomponents:dustSteel Crafting"=true
     B:"Allow item.basiccomponents:motor Crafting"=true
     B:"Allow item.basiccomponents:plateBronze Crafting"=true
+    B:"Allow item.basiccomponents:plateCopper Crafting"=true
+    B:"Allow item.basiccomponents:plateGold Crafting"=true
+    B:"Allow item.basiccomponents:plateIron Crafting"=true
     B:"Allow item.basiccomponents:plateSteel Crafting"=true
+    B:"Allow item.basiccomponents:plateTin Crafting"=true
     B:"Allow item.basiccomponents:wrench Crafting"=true
+    B:"Allow item.ingotGold Crafting"=true
+    B:"Allow item.ingotIron Crafting"=true
     B:"Allow itemIngotCopper Crafting"=true
     B:"Allow railcraft.ingot.steel Crafting"=true
 }
@@ -37,7 +43,11 @@ item {
     I:oreCopper=3970
     I:oreTin=3971
     I:plateBronze=13979
+    I:plateCopper=13977
+    I:plateGold=13982
+    I:plateIron=13981
     I:plateSteel=13980
+    I:plateTin=13978
     I:wrench=13972
 }
 
