--- a/config/forestry/base.conf
+++ b/config/forestry/base.conf
@@ -92,6 +92,63 @@ item {
     I:chipsets=13112
     I:craftingMaterial=13098
     I:crate=13001
+    I:cratedApatite=13515
+    I:cratedApples=13539
+    I:cratedAsh=13551
+    I:cratedBeeswax=13528
+    I:cratedBogearth=13511
+    I:cratedBrass=13524
+    I:cratedBrick=13504
+    I:cratedBronze=13519
+    I:cratedCacti=13505
+    I:cratedCharcoal=13552
+    I:cratedClay=13537
+    I:cratedCoal=13554
+    I:cratedCobblestone=13501
+    I:cratedCocoaComb=13533
+    I:cratedCookies=13526
+    I:cratedCopper=13518
+    I:cratedDirt=13502
+    I:cratedDrippingCombs=13548
+    I:cratedFertilizer=13516
+    I:cratedFrozenCombs=13547
+    I:cratedGlowstone=13538
+    I:cratedGravel=13553
+    I:cratedHoneycombs=13527
+    I:cratedHoneydew=13531
+    I:cratedHumus=13512
+    I:cratedLapis=13535
+    I:cratedMulch=13522
+    I:cratedMycelium=13521
+    I:cratedNetherbrick=13513
+    I:cratedNetherrack=13508
+    I:cratedNetherwart=13540
+    I:cratedNikolite=13525
+    I:cratedObsidian=13507
+    I:cratedPeat=13514
+    I:cratedPhosphor=13550
+    I:cratedPollen=13529
+    I:cratedPropolis=13530
+    I:cratedRedstone=13534
+    I:cratedReeds=13536
+    I:cratedRefractoryWax=13549
+    I:cratedResin=13541
+    I:cratedRoyalJelly=13532
+    I:cratedRubber=13542
+    I:cratedSand=13506
+    I:cratedSandstone=13510
+    I:cratedSaplings=13556
+    I:cratedScrap=13543
+    I:cratedSeeds=13555
+    I:cratedSilver=13523
+    I:cratedSimmeringCombs=13545
+    I:cratedSoulsand=13509
+    I:cratedStone=13503
+    I:cratedStringyCombs=13546
+    I:cratedTin=13517
+    I:cratedUUM=13544
+    I:cratedWheat=13520
+    I:cratedWood=13500
     I:decayingWheat=13021
     I:diggerBag=13050
     I:diggerBagT2=13089
