ID Change in Better Biomes
I:"Item ID of Sapling Planter"=3801 to 2840

--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -47,7 +47,7 @@ appeng {
     ####################
 
     vesionchecker {
-        S:lastStarted=hl3rcw3d
+        S:lastStarted=hl3x4pwy
     }
 
 }
