--- a/config/BiblioCraft.cfg
+++ b/config/BiblioCraft.cfg
@@ -51,6 +51,9 @@ general {
     # Setting this to true will disable all renderers. This will allow a world to be loaded and a problem item removed from a BiblioCraft block in case of a rendering related crash.
     B:DisableRenderers=false
 
+    # This will set the max number of uses an Enchanted Plate has before breaking. Default is 3.
+    I:MaxEnchantedPlateUses=3
+
     # Setting to true renders a shadow behind the text seen with the reading glasses. This can improve visability quite a bit, but sometimes doesn't render correctly. Try at your own discretion.
     B:RenderTextShadow=false
 }
