--- a/config/Galacticraft/core.conf
+++ b/config/Galacticraft/core.conf
@@ -124,6 +124,9 @@ general {
     # Bypass mod requirements and load anyway (not recommended).
     B:"Force Load"=false
 
+    # By default, you will respawn on galacticraft dimensions if you die. If you set this to true, you will respawn back on earth.
+    B:"Force Overworld Spawn"=false
+
     # If you prefer low-resolution textures, set this to false
     B:"Hi-Res Textures (32x32)"=true
 
