--- a/config/GraveStoneMod/GraveStone.cfg
+++ b/config/GraveStoneMod/GraveStone.cfg
@@ -18,6 +18,7 @@ block {
 
 general {
     B:CanPlaceGravesEveryWhere=false
+    B:EnableNightStone=true
     B:GenerateCatacombs=true
     B:GenerateCemeteries=true
     B:GenerateGravesInLava=true
@@ -33,6 +34,7 @@ general {
     # This value must be between 0 an 40!
     I:SavedItemsCount=10
     B:SilkTouchForGraves=true
+    I:SpawnChance=80
 
     # This value must be bigger than 1800!
     I:SpawnRate=1800
@@ -40,8 +42,6 @@ general {
     B:SpawnSkeletonDogs=true
     B:SpawnZombieCats=true
     B:SpawnZombieDogs=true
-
-    # Set "true" only if you didn't change any Highlands configurations.
     B:UseHighlandsBiomes=false
 }
 
