--- a/config/buildcraft/main.conf
+++ b/config/buildcraft/main.conf
@@ -54,6 +54,9 @@ general {
     # Can oil burn?
     B:burnOil=true
 
+    # Set to true to enable alternate textures
+    B:client.colorblindmode=false
+
     # set to true if the Pump should consume water
     B:consumeWater=false
 
@@ -94,7 +97,7 @@ general {
     S:power.framework=buildcraft.energy.PneumaticPowerFramework
     S:pumping.controlList=+/*/*,+/-1/lava
     B:trackNetworkUsage=false
-    S:version=4.0.1-55-gf02295b
+    S:version=4.0.1-61-g158c79c
 }
 
 
