Config and mod update
43ac54f70007fa481ab6af419f15e380006031d0

New: Nuclear Control(IC2) v.1.6.2c
-Red Screen ID Conflict: 'immibis.cfg' Change I:liquidxp.machine.id=4085
to 2821. Works.

Forge Multi-Part** v1.0.0.158

--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -47,7 +47,7 @@ appeng {
     ####################
 
     vesionchecker {
-        S:lastStarted=hl79cjg5
+        S:lastStarted=hl7i9fm2
     }
 
 }
