--- a/config/BetterGrassAndLeavesMod.cfg
+++ b/config/BetterGrassAndLeavesMod.cfg
@@ -42,10 +42,10 @@ general {
     S:currentSeaweedRenderer=Standard
 
     # Force rotate grass top textures for a more natural look (can break texturepack patterns)? (OFF, ON)
-    S:forceNaturalGrassTextures=Off
+    S:forceNaturalGrassTextures=OFF
 
     # Force rotate leaf textures for a more natural look (can break texturepack patterns)? (OFF, ON)
-    S:forceNaturalLeafTextures=Off
+    S:forceNaturalLeafTextures=OFF
 
     # Falling Leaves spawn rate multiplier. (1.0 - 20.0)
     S:leavesFXSpawnRate=1.0
@@ -54,28 +54,28 @@ general {
     S:reedPopulation=0.4
 
     # Render Better Grass? (OFF, ON)
-    S:renderBetterGrass=On
+    S:renderBetterGrass=OFF
 
     # Render Better Leaves? (OFF, ON)
-    S:renderBetterLeaves=On
+    S:renderBetterLeaves=ON
 
     # Render Better Seaweed? (OFF, ON)
-    S:renderBetterSeaweed=On
+    S:renderBetterSeaweed=ON
 
     # Render walking through grass effect? (OFF, ON)
-    S:renderGrassFX=On
+    S:renderGrassFX=ON
 
     # Render Better Grass Sides? (OFF, ON)
-    S:renderGrassSides=On
+    S:renderGrassSides=ON
 
     # Render the old cube like leaves? (OFF, ON)
-    S:renderLeafBlocks=On
+    S:renderLeafBlocks=ON
 
     # Render falling leaves effect? (OFF, Fast, Fancy)
     S:renderLeavesFX=Fast
 
     # Use rounded versions of the vanilla leaf textures? (OFF, ON)
-    S:useRoundedVanillaLeaves=On
+    S:useRoundedVanillaLeaves=ON
 }
 
 
