--- a/config/MiscPeripherals.cfg
+++ b/config/MiscPeripherals.cfg
@@ -127,6 +127,12 @@ features {
     # Enable the Iron Note Block peripheral and turtle upgrade
     B:enableNote=true
 
+    # Enable the Nuclear Information Reader peripheral
+    B:enableNuclearReader=true
+
+    # Enable the Advanced Nuclear Information Reader peripheral
+    B:enableNuclearReaderT2=true
+
     # Enable the Ore Scanner turtle upgrade
     B:enableODScanner=true
 
