--- a/config/NEI.cfg
+++ b/config/NEI.cfg
@@ -26,7 +26,7 @@ inventory
 	#Set this to a mode and you will be unable to change it ingame
 	lockmode=-1
 	profileRecipes=false
-	utilities=delete, magnet
+	utilities=delete, magnet, heal
 	widgetsenabled=true
 }
 
