BetterGrassAndLeavesMod.cfg changes
-Render Better Leaves to OFF
-Render walking through grass effect to OFF

--- a/config/BetterGrassAndLeavesMod.cfg
+++ b/config/BetterGrassAndLeavesMod.cfg
@@ -57,13 +57,13 @@ general {
     S:renderBetterGrass=OFF
 
     # Render Better Leaves? (OFF, ON)
-    S:renderBetterLeaves=ON
+    S:renderBetterLeaves=OFF
 
     # Render Better Seaweed? (OFF, ON)
     S:renderBetterSeaweed=ON
 
     # Render walking through grass effect? (OFF, ON)
-    S:renderGrassFX=ON
+    S:renderGrassFX=OFF
 
     # Render Better Grass Sides? (OFF, ON)
     S:renderGrassSides=ON
