Industrial Craft 2 Experimental (IC2) v138 update
Industrial Craft 2 Experimental (IC2) v2.0.138 (9/5/2013) update
-README.md
-mods
-config

Changes
#138 (Sep 5, 2013 5:38:51 PM)
Adjusted the Tiers of Electric Tools, as there is the new Tier 2 pushing
everything else one Tier up. — gregoriustech / detail

--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -47,7 +47,7 @@ appeng {
     ####################
 
     vesionchecker {
-        S:lastStarted=hl7i9fm2
+        S:lastStarted=hl86zxyk
     }
 
 }
