Forge and mod/config update
README.md
-config
-mods
-Forge

Iron Chests v5.3.20.551 (9/5/2013)

Compact Solars v4.4.13.124 (9/5/2013)

Forge v9.10.1.850 1.6.2 (9/5/2013)
Changelog:

Build 1.6.2-9.10.1.850
claire.alexandria: Added tessellation methods to obj model, for
ISBRH-friendliness
claire.alexandria: Fixed both RenderAllExcept behaviours
claire.alexandria: Added more render methods to IModelCustom interface.
jeffreykog
Added GuiOpenEvent
You can use this for a clean way to override guis, without needing an
TickHandler to check if the gui you want to override is open and show
your own gui
Proper close check
mhahn
capacity was not respected
Updated to properly calculate the amount of free space in the tank
before checking that against the amount of the resource.
robin: create french localization
claire.alexandria: Added display name hook
claire.alexandria: Memoization of display name result
claire.alexandria: Added mouse event
claire.alexandria: inserted hook into Minecraft.java
claire.alexandria: fixed logic error
ohai.iChun
Fix player push out of blocks clientside being hardcoded and not based
on entity size.
Added player eyeHeight field to allow changeable eye heights of players
rather than being hardcoded per player class as well as add a
getDefaultEyeHeight function.
cpw: Reduce patch size significantly
cpw: Fix patch for new MCP naming.
cpw: Add a bit of javadoc
cpw: MachineMuse, remember, there's TWO model formats supported!
cpw: Defer firing CreateDecorator until it's likely mods have had a
chance to register their listener. Should close #759
cpw
Add a harvestblock event, to allow mods to intercept and change the
drops for blocks. Don't abuse this, or we'll have to take safety
measures.
Fires for both silktouch and non-silktouch harvesting, and provides the
player. Note, you may need to
change your break overrides to pass on the player for best results.
cpw: Add in a block reverse lookup for fluids. Closes #749

--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -47,7 +47,7 @@ appeng {
     ####################
 
     vesionchecker {
-        S:lastStarted=hl86zxyk
+        S:lastStarted=hl88pnnp
     }
 
 }
