Forge and mod/config update
README.md
-config
-mods
-Forge

Iron Chests v5.3.20.552 (9/5/2013)

Compact Solars v4.4.13.125 (9/5/2013)

Forge v9.10.1.851 1.6.2 (9/5/2013)
Changelog:

Build 1.6.2-9.10.1.851
cpw: Use the dropchance from the event.
cpw: Clean up some formatting.

--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -47,7 +47,7 @@ appeng {
     ####################
 
     vesionchecker {
-        S:lastStarted=hl88pnnp
+        S:lastStarted=hl890byp
     }
 
 }
