--- a/config/NEIAddons.cfg
+++ b/config/NEIAddons.cfg
@@ -9,6 +9,7 @@
 addons {
     B:"Applied Energistics"=true
     B:"Crafting Tables"=true
+    B:"Extra Bees"=true
     B:Forestry=true
     B:"Misc Peripherals"=true
 }
@@ -21,6 +22,19 @@ addons {
 "applied energistics" {
     # If set to true will swap normal and shift click behavior
     B:"Invert Shift"=false
+}
+
+
+####################
+# extra bees
+####################
+
+"extra bees" {
+    # Set to true to dump all serums on startup for debug purposes
+    B:"Dump serum list"=false
+
+    # Set to true to load blacklisted species and alleles, it's dangerous and (mostly) useless
+    B:"Load blacklisted"=false
 }
 
 
