Forge v852 and mod/config update
README.md
-config
-mods
-Forge

Iron Chests v5.3.20.553 (9/5/2013)

Compact Solars v4.4.13.126 (9/5/2013)

Forge v9.10.1.852 1.6.2 (9/5/2013)
Changelog:
Build 1.6.2-9.10.1.852
cpw: Add some javadoc to the HarvestBlock event.

Industrial Craft 2 Experimental (IC2) v2.0.140 (9/5/2013)
Changes
#140 (Sep 5, 2013 11:06:18 PM)
Fixed just the Name of the insulatedTinCableItem reference —
gregoriustech / detail

#139 (Sep 5, 2013 10:07:20 PM)
energy net: add some type asserts in the node ctor — player / detail
nano suit: leave it at tier 2 as the most basic el. armor — player /
detail

--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -47,7 +47,7 @@ appeng {
     ####################
 
     vesionchecker {
-        S:lastStarted=hl8bu9gw
+        S:lastStarted=hl8kawde
     }
 
 }
