Forge v853 and mod/config update.
Forge v9.10.1.853 1.6.2 (9/6/2013)
Changelog:
Build 1.6.2-9.10.1.853
cpw
Add a cancellable despawn event- allows mods to decide to prevent the
despawning
of certain otherwise normally despawnable mobs.
cpw
Added fov hook
Small formatting changes (opening braces on new line)
cpw: Create es_ES.lang

Industrial Craft 2 Experimental (IC2) v2.0.141 (9/6/2013)
Changes
#141 (Sep 6, 2013 5:50:52 PM)
Removed any usage of refined Iron, by turning the Forge Hammer Recipe by
90° and making it use regular Iron. — gregoriustech / detail

Iron Chests v5.3.20.554 (9/6/2013)

Compact Solars v4.4.13.127 (9/6/2013)

--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -47,7 +47,7 @@ appeng {
     ####################
 
     vesionchecker {
-        S:lastStarted=hl8vu1tx
+        S:lastStarted=hl9qf0vm
     }
 
 }
