Forge v859 and mod/config update.
Forge v9.10.1.859 1.6.2 (9/7/2013)
Changelog:

Build 1.6.2-9.10.1.859
cpw: The partial tick should be available for all render player events.
Weird it wasn't.

Build 1.6.2-9.10.1.858
cpw: Reverting HarvestEvent, for new implementation
cpw: Redo harvest event. This time with simpler logic, that should be
less liable to weird "missing" stuff.

Build 1.6.2-9.10.1.857
LexManos: Fix bug where guis were not closed properly, resulting in
signs not having there text set.

Build 1.6.2-9.10.1.856
cpw: Change trigger calculation so entities get some time to age before
refiring the event.

Build 1.6.2-9.10.1.855
LexManos: Create helper apply_patches script and add paramter to change
patch output folder.

Build 1.6.2-9.10.1.854
cpw
Change from Cancelable to using a Result. This means you can force
despawn mobs you
don't want around anymore. Also, deferred check to once every 20 ticks.
May tune it
down further or make it a config if this event is a lag issue.

GalactiCraft v1.6.2-a0.1.39.666 (9/7/2013)
Changes

#666 (Sep 7, 2013 12:24:32 PM)

Minimal update (commit: 5e0e0f2475f82a8e2e51410ba156e0e61a67fedd) —
Vexatos / detail
Remove debug message. (commit: a2c509d1cadc45b12d3af88d4a87589e4163e11f)
— mitchpetrie29 / detail
Fix server crash upon spawning Slimeling. (commit:
3468e94f2d3b0fdf99b327105a781def7c52bd5c) — mitchpetrie29 / detail
Remove "Disable Ore Gen" from config, since you can disable it in the
Basic Components config. (commit:
5e00f9e14f0112b081e4b6fe63a6afa1b2b19db2) — mitchpetrie29 / detail
Remove unused file. (commit: 831b4c3540b9cb31703560d064e26b26336b8353) —
mitchpetrie29 / detail
Temporarily remove chest unlock sound, seems to be causing crashes?
(commit: 55a616ed016d40ecde7f6cd7645157881fa462cb) — mitchpetrie29 /
detail
#665 (Sep 7, 2013 11:17:20 AM)

Clean up code (commit: 2544e957faa2661881972d1e30916c8214e3b232) —
mitchpetrie29 / detail
Fix local repo (commit: a2300c02ad623daf9a80aa039153889e18f206b6) —
mitchpetrie29 / det

--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -47,7 +47,7 @@ appeng {
     ####################
 
     vesionchecker {
-        S:lastStarted=hl9qf0vm
+        S:lastStarted=hlbj8gji
     }
 
 }
