Added Logistics Pipes 1.6.2 dev v7 (9/7/2013)
Logistics Pipes 1.6.2 dev v7 (9/7/2013)
Changes

#7 (Sep 7, 2013 10:16:15 PM)

Try to fix the RequestTable rendering. (commit:
a951f0898de0ef6059aec1df46b13c2c6fbaecf8) — davboecki / detail
#6 (Sep 7, 2013 9:55:25 PM)

It's FMLCorePluginContainsFMLMod not FMLCorePluginContainsMod. :(
(commit: 178a47c458e53e8aa90b4b23bfa1c7c8a820a3c2) — davboecki / detail
#5 (Sep 7, 2013 9:35:26 PM)

fix NPE when InventoryChanged is called from readFromNBT (commit:
1ba69b51296ddd6b1d858208b310c88944ffd874) — davboecki / detail
Automatically copy the dummy jar to make the mcp eclipse workspace work
(commit: e3547f05225467c7ef5dbdb9c590909c5e3cad39) — artforz / detail
Fix typo (commit: f6b9006077ef240914e0cbcf6288a019d84bfe1a) — artforz /
detail
#4 (Sep 7, 2013 9:29:20 PM)

Readd Spawn position movement. (commit:
96078bbfd450a97a3fcf2db3bfee6254cb0dab5a) — davboecki / detail
Add missing version annotation. (commit:
ad9b9be201757e221e424b60890ee44c7159c513) — davboecki / detail
#3 (Sep 7, 2013 9:03:20 PM)

LP now is a real CoreMod. (commit:
da95e41273a24e75e6e3301c13587b229fb06239) — davboecki / detail
Only fire the Energy Events server side. (commit:
ec95d728f51d503c3972d6e6f4e0b2368e99fd10) — davboecki / detail
#2 (Sep 7, 2013 7:37:16 PM)

Fix method name overlapping. (commit:
0c05d219c6c15d5ea59401df7ef31ee843d9eeb4) — davboecki / detail

Config:
ID Conflict: **'LogisticsPipe.cfg'** Change I:logisticsSolidBlockId=1101
to 1102.

--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -47,7 +47,7 @@ appeng {
     ####################
 
     vesionchecker {
-        S:lastStarted=hlbj8gji
+        S:lastStarted=hlbmk8e5
     }
 
 }
