Industrial Craft 2 Experimental (IC2) v2.0.150
Industrial Craft 2 Experimental (IC2) v2.0.150 (9/7/2013)
Changes

#150 (Sep 8, 2013 5:12:49 AM)

audio: improve culling — player / detail

--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -47,7 +47,7 @@ appeng {
     ####################
 
     vesionchecker {
-        S:lastStarted=hlbmk8e5
+        S:lastStarted=hlbp2rf9
     }
 
 }
