--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -47,7 +47,7 @@ appeng {
     ####################
 
     vesionchecker {
-        S:lastStarted=hlbp2rf9
+        S:lastStarted=hlbpp7ae
     }
 
 }
