Mod/config update
GalactiCraft v1.6.2-a0.1.40.667 (9/8/2013)
Changes

#667 (Sep 8, 2013 2:51:26 AM)

Bump version to 0.1.40 (commit:
26b37db08c275226800cc007e2b521754f012686) — mitchpetrie29 / detail
Rename most textures to match language file, clean up item classes
significantly. (commit: 0c0731093ff8c3c8f9de4b181f58e47e83da2c11) —
mitchpetrie29 / detail
Add API hook to access galacticraft items. Similar to IC2, Thermal
Expansion, etc. (commit: d7afe4f44bc642af9f44b2c3673c5d0fb96e83f1) —
mitchpetrie29 / detail

Mekanism v5.5.7.211
#211
Non-dev ChickenCore derp

Immibis Core v56.0.5

Resonant Induction v171
#171
Attempt to fix render battery crash

--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -47,7 +47,7 @@ appeng {
     ####################
 
     vesionchecker {
-        S:lastStarted=hlbpp7ae
+        S:lastStarted=hlci1h7t
     }
 
 }
