--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -47,7 +47,7 @@ appeng {
     ####################
 
     vesionchecker {
-        S:lastStarted=hlci1h7t
+        S:lastStarted=hlcr93tc
     }
 
 }
@@ -95,6 +95,7 @@ features {
     B:enableTPlane=true
     B:enableTinyTNTBlockDamage=true
     B:enableVibrationCata=true
+    B:enableVillagerTrading=true
     B:enableWirelessAccess=true
 }
 
@@ -236,6 +237,16 @@ me {
         D:tier4Power=2.0
     }
 
+}
+
+
+####################
+# transitionplane
+####################
+
+transitionplane {
+    S:blackList <
+     >
 }
 
 
