--- a/config/FinderCompass.cfg
+++ b/config/FinderCompass.cfg
@@ -27,7 +27,7 @@
 // For your convenience here's some presets
 //
 //
-Setting:Adventuring
+Setting:Mob Spawn/Chest
 // NoDefaultNeedle
 // NoEnderEyeNeedle
 //
@@ -38,7 +38,7 @@ Setting:Adventuring
 54:184:138:0:60:60:1:100:1
 //
 //
-Setting:Shiny Stones
+Setting:Diamond/Lapis/Redstone/Emerald
 //
 NoDefaultNeedle
 NoEnderEyeNeedle
@@ -56,7 +56,7 @@ NoEnderEyeNeedle
 129:26:255:26:7:1:4:31:0 
 //
 //
-Setting:Working Man's Mineables
+Setting:Gold/Iron/Coal
 //
 NoDefaultNeedle
 NoEnderEyeNeedle
