--- a/config/forestry/gamemodes/NORMAL.conf
+++ b/config/forestry/gamemodes/NORMAL.conf
@@ -1,13 +1,13 @@
 # Forestry
-# @VERSION@ (@BUILD_NUMBER@)
+# 2.3.0.1 (638)
 #
 # Config files:
-# base.conf	-	 Contains Forge configuration for block and item ids
-# common.conf	-	 Contains all options common to Forestry
+# base.conf		-	 Contains Forge configuration for block and item ids
+# common.conf		-	 Contains all options common to Forestry
 # apiculture.conf	-	 Contains all options for bee breeding
 # backpacks.conf	-	 Contains custom configurations for backpacks
-# pipes.conf	-	 Configures item id for the apiarist's pipe
-# gamemodes/	-	 Configures available gamemodes
+# pipes.conf		-	 Configures item id for the apiarist's pipe
+# gamemodes/		-	 Configures available gamemodes
 
 #####################
 # ENERGY
@@ -21,14 +21,14 @@ energy.engine.clockwork=true
 #####################
 # FARMS
 #####################
-# modifies the time fertilizer lasts in a farm.
+# modifies the time a piece of fertilizer lasts in a farm.
 farms.fertilizer.value=1000
 
 
 #####################
 # FERMENTER
 #####################
-# modifies the amount of cycles a fertilizer can keep a fermenter going.
+# modifies the amount of cycles fertilizer can keep a fermenter going.
 fermenter.cycles.fertilizer=150
 # modifies the amount of cycles compost can keep a fermenter going.
 fermenter.cycles.compost=200
@@ -36,15 +36,15 @@ fermenter.cycles.compost=200
 fermenter.value.fertilizer=56
 # modifies the amount of biomass per cycle a fermenter will produce using compost.
 fermenter.value.compost=48
-# modifies the amount of biomass a sapling will yield in a fermenter.
+# modifies the base amount of biomass a sapling will yield in a fermenter, affected by sappiness trait. (max: 2000)
 fermenter.yield.sapling=100
-# modifies the amount of biomass a piece of cactus will yield in a fermenter.
+# modifies the amount of biomass a piece of cactus will yield in a fermenter. (max: 400)
 fermenter.yield.cactus=25
-# modifies the amount of biomass a piece of wheat will yield in a fermenter.
+# modifies the amount of biomass a piece of wheat will yield in a fermenter. (max: 400)
 fermenter.yield.wheat=25
-# modifies the amount of biomass a mushroom will yield in a fermenter.
+# modifies the amount of biomass a mushroom will yield in a fermenter. (max: 400)
 fermenter.yield.mushroom=25
-# modifies the amount of biomass a piece of sugar cane will yield in a fermenter.
+# modifies the amount of biomass a piece of sugar cane will yield in a fermenter. (max: 400)
 fermenter.yield.cane=25
 
 
@@ -78,6 +78,9 @@ recipe.output.humus.compost=8
 #####################
 # SQUEEZER
 #####################
-# modifies the amount of seed oil squeezed from a single seed.
-squeezer.liquid.seed=5
-
+# modifies the amount of seed oil squeezed from a single seed. other sources are based off this. (max: 80)
+squeezer.liquid.seed=8
+# modifies the amount of juice squeezed from a single apple. other sources are based off this. (max: 1600)
+squeezer.liquid.apple=200
+# modifies the chance of mulch per squeezed apple. (max: 160)
+squeezer.mulch.apple=20
