Configs. ID Changes.

--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -47,7 +47,7 @@ appeng {
     ####################
 
     vesionchecker {
-        S:lastStarted=hlcr93tc
+        S:lastStarted=hle1ihqn
     }
 
 }
