--- a/config/TreeCapitator.cfg
+++ b/config/TreeCapitator.cfg
@@ -30,6 +30,11 @@ general_settings {
         # When false oreDictionaryLogStrings and oreDictionaryLeafStrings will be ignored. [default: true]
         B:allowOreDictionaryLookup=true
 
+        # [Global] Add block IDs to this list if you want to keep them from being registered as logs. This list will override
+        # the local user configuration, inter-mod communication (IMC) configuration, and the Ore Dictionary scanning feature.
+        # Use ',' to split block ID from metadata and ';' to split entries. [default: ]
+        S:blockIDBlacklist=
+
         # [Global] When useIncreasingItemDamage=true the damage applied per block broken will increase by this 
         # amount every increaseDamageEveryXBlocks blocks broken in a tree. [range: 0.1 ~ 100.0, default: 1.0]
         S:damageIncreaseAmount=1.0
@@ -59,14 +64,19 @@ general_settings {
         # this many blocks are broken in a tree. [range: 1 ~ 500, default: 8]
         I:increaseDamageEveryXBlocks=8
 
+        # [Global] Add item IDs to this list if you want to keep them from being registered as axes. This list will override
+        # the local user configuration and inter-mod communication (IMC) configuration.
+        # Use ',' to split item ID from metadata and ';' to split entries. [default: ]
+        S:itemIDBlacklist=
+
         # [Global] Whether you need an item from the axeIDList to chop down a tree. Disabling will let you chop 
         # trees with any item. [default: true]
         B:needItem=true
 
-        # The list of leaf type values to check for in the Forge Ore Dictionary. Entries are comma (,) separated. [default: treeLeaves,]
+        # [Global] The list of leaf type values to check for in the Forge Ore Dictionary. Entries are comma (,) separated. [default: treeLeaves,]
         S:oreDictionaryLeafStrings=treeLeaves,
 
-        # The list of log type values to check for in the Forge Ore Dictionary. Entries are comma (,) separated. [default: logWood,]
+        # [Global] The list of log type values to check for in the Forge Ore Dictionary. Entries are comma (,) separated. [default: logWood,]
         S:oreDictionaryLogStrings=logWood,
 
         # [Global] Whether or not to check the axe ID list for an item when determining if a given item can be 
