--- a/config/buildcraft/main.conf
+++ b/config/buildcraft/main.conf
@@ -97,7 +97,7 @@ general {
     S:power.framework=buildcraft.energy.PneumaticPowerFramework
     S:pumping.controlList=+/*/*,+/-1/lava
     B:trackNetworkUsage=false
-    S:version=4.0.1-61-g158c79c
+    S:version=4.0.1-64-g87bb24e
 }
 
 
