--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -47,7 +47,7 @@ appeng {
     ####################
 
     vesionchecker {
-        S:lastStarted=hle1ihqn
+        S:lastStarted=hled9fh8
     }
 
 }
