Mod/Config update
Forge Multi-Part v1.0.0.167

GalactiCraft v1.6.2-a0.1.40.669 (9/10/2013)
Changes
#669 (Sep 10, 2013 1:11:51 AM)
Fix rotation of buggy wheels to match motion. (commit:
25dbcd483bac53c33fd6bbdf7f2da8546d4034cc) — mitchpetrie29 / detail
Fix slimelings opening favourite food gui, even with nothing in hand.
(commit: 7921dc9fd36ec89b88c0725d74fd9d0becc74021) — mitchpetrie29 /
detail
Fix parachute working, sometimes without having a parachute equipped.
(commit: adf634dabb17ecd1918a683f068f13f81471388f) — mitchpetrie29 /
detail

Logistics Pipes 1.6.2 dev v14 (9/10/2013)
Changes
#14 (Sep 10, 2013 1:30:10 PM)
You can't have static initializers for @SideOnly fields (commit:
8515eeef6d081d84d635c8c06dbaf61a452b351d) — artforz / detail

--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -47,7 +47,7 @@ appeng {
     ####################
 
     vesionchecker {
-        S:lastStarted=hled9fh8
+        S:lastStarted=hlfbnk8b
     }
 
 }
