Project: Red v4.0.0.2 release
ID Conflict: 'ProjectRed.cfg' Change I:"Illuminated Button Part ID"=9038
to 3609.

Project: Red v4.0.0.2 (9/10/2013)

--- a/config/AdvancedMachines.cfg
+++ b/config/AdvancedMachines.cfg
@@ -1,6 +1,17 @@
 # Configuration file
 
 ####################
+# general
+####################
+
+general {
+    B:"Centrifuge Extractor Enabled"=true
+    B:"Rotary Macerator Enabled"=true
+    B:"Singularity Compressor Enabled"=true
+}
+
+
+####################
 # ids
 ####################
 
