--- a/config/ProjectRed.cfg
+++ b/config/ProjectRed.cfg
@@ -21,10 +21,14 @@ block {
 ####################
 
 general {
+    # If set to false, flat wire textures will be used for logic gates. Significant performance improvement
+    B:3Dlogicwires=true
+
     # Enable advanced debugging, should ALWAYS be false.
     B:"Enable Debugging"=false
 
-    # This is the distance in which players will be notified.  Lower if you experience lag.
+    # If set to false, logic gates will not make sounds.
+    B:"Logic Sounds"=true
     D:"Network Update Range"=50.0
 }
 
@@ -95,11 +99,13 @@ modules {
 
 "multipart item ids" {
     I:"Gate Part ID"=3602
+    I:"Illuminated Button Part ID"=3609
     I:"Inverted Lamp Part ID"=3608
     I:"Inverted Lantern Part ID"=3606
     I:"Jacketed Wire Part ID"=3604
     I:"Lamp Part ID"=3607
     I:"Lantern Part ID"=3605
+    I:"Tube Part ID"=9037
     I:"Wire Part ID"=3603
 }
 
@@ -115,6 +121,7 @@ modules {
     B:"Sapphire Ore"=true
     B:"Spreading Moss"=true
     B:Valcanos=true
+    B:Volcanos=true
 }
 
 
