Config: ID Conflict: 'pamharvestcraft.cfg' With IC2
ID Conflict: 'pamharvestcraft.cfg'  I:coloredclothstairslightblueID=4038
to 2841

--- a/config/IC2.cfg
+++ b/config/IC2.cfg
@@ -41,6 +41,7 @@ block {
     I:blockRubber=4010
     I:blockScaffold=4024
     I:blockWall=4013
+    I:blockfluidCF=4038
     I:blockfluidUUMater=4037
 }
 
@@ -244,6 +245,7 @@ item {
     I:itemNightvisionGoggles=29822
     I:itemOreIridium=29872
     I:itemPartAlloy=29931
+    I:itemPartCFPowder=29876
     I:itemPartCarbonFibre=29896
     I:itemPartCarbonMesh=29895
     I:itemPartCarbonPlate=29894
