--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -47,7 +47,7 @@ appeng {
     ####################
 
     vesionchecker {
-        S:lastStarted=hlflbkcs
+        S:lastStarted=hliie1g1
     }
 
 }
@@ -197,7 +197,7 @@ me {
         I:automationMinTickRate=5
         D:base.wireless.range=32.0
         I:craftingMinTickRate=0
-        S:defaultUnits=AE
+        S:defaultUnits=UE
         B:enableShiftInCondenser=false
         I:max.wireless.extenderBonus=2
         I:max.wireless.extenders=16
@@ -207,7 +207,7 @@ me {
         B:requirePower=true
         B:sharePowerLPRS485=true
         I:storageBusMinTickRate=5
-        S:terminalAutoSearch=Autosearch
+        S:terminalAutoSearch=NEIStandard
         B:terminalSearchToolTips=true
         S:terminalSortBy=Name
         S:terminalSortDirection=ASC
