--- a/config/buildcraft/main.conf
+++ b/config/buildcraft/main.conf
@@ -77,6 +77,8 @@ general {
 
     # the lifespan in ticks of items dropped on the ground by pipes and machines, vanilla = 6000, default = 1200
     I:itemLifespan=1200
+    D:mining.cost.multipler=1.0
+    I:mining.depth=256
     B:mining.enabled=true
 
     # set to false if BuildCraft should not generate custom blocks (e.g. oil)
@@ -96,8 +98,9 @@ general {
     I:pipes.groupItemsTrigger=32
     S:power.framework=buildcraft.energy.PneumaticPowerFramework
     S:pumping.controlList=+/*/*,+/-1/lava
+    B:quarry.one.time.use=false
     B:trackNetworkUsage=false
-    S:version=4.0.1-64-g87bb24e
+    S:version=4.0.1-66-g47d504d
 }
 
 
