Configs + part2 of last commits

--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -47,7 +47,7 @@ appeng {
     ####################
 
     vesionchecker {
-        S:lastStarted=hliie1g1
+        S:lastStarted=hljnu514
     }
 
 }
