--- a/config/BetterGrassAndLeavesMod.cfg
+++ b/config/BetterGrassAndLeavesMod.cfg
@@ -6,10 +6,10 @@
 
 general {
     # Spawn frenquency multiplier for Better Algae. (0.0 - 1.0)
-    S:algaePopulation=0.3
+    S:algaePopulation=0.13380282
 
     # Height multiplier for Better Grass. (0.0 - 1.0)
-    S:averageGrassHeight=0.5
+    S:averageGrassHeight=0.14788732
 
     # Brightness multiplier of Better Algae. (0.0 - 1.0)
     S:betterAlgaeBrightness=1.0
@@ -23,7 +23,7 @@ general {
     # Brightness multiplier of Better Reed. (0.0 - 1.0)
     S:betterReedBrightness=1.0
 
-    # The listed block IDs won't render Better Grass, Better Leaves or their effects. (e.g. blackList=10,20,30)
+    # The listed block IDs won't render Better Grass, Better Leaves or their effects. (e.g. blackList=10, 20, 30)
     S:blackList=
 
     # Brightness multiplier of vanilla grass cubes. (0.0 - 1.0)
@@ -35,7 +35,7 @@ general {
     # Which grass renderer should be used? (Standard, Experimental)
     S:currentGrassRenderer=Standard
 
-    # Which leaves renderer should be used? (Standard)
+    # Which leaves renderer should be used? (Standard, Experimental)
     S:currentLeavesRenderer=Standard
 
     # Which Seaweed renderer should be used? (Standard)
@@ -47,11 +47,11 @@ general {
     # Force rotate leaf textures for a more natural look (can break texturepack patterns)? (OFF, ON)
     S:forceNaturalLeafTextures=OFF
 
-    # Falling Leaves spawn rate multiplier. (1.0 - 20.0)
-    S:leavesFXSpawnRate=1.0
+    # Falling Leaves spawn rate multiplier. (0.0 - 1.0)
+    S:leavesFXSpawnRate=0.1056338
 
     # Spawn frenquency multiplier for Better Reed. (0.0 - 1.0)
-    S:reedPopulation=0.4
+    S:reedPopulation=0.20422535
 
     # Render Better Grass? (OFF, ON)
     S:renderBetterGrass=OFF
@@ -62,7 +62,10 @@ general {
     # Render Better Seaweed? (OFF, ON)
     S:renderBetterSeaweed=ON
 
-    # Render walking through grass effect? (OFF, ON)
+    # Render footprints effect? (OFF, Fast, Fancy)
+    S:renderFootprintsFX=Fancy
+
+    # Render walking through grass effect? (OFF, Fast, Fancy)
     S:renderGrassFX=OFF
 
     # Render Better Grass Sides? (OFF, ON)
@@ -72,10 +75,22 @@ general {
     S:renderLeafBlocks=ON
 
     # Render falling leaves effect? (OFF, Fast, Fancy)
-    S:renderLeavesFX=Fast
+    S:renderLeavesFX=OFF
+
+    # Render Better Grass Snowed? (OFF, ON)
+    S:renderSnowedGrass=ON
+
+    # Render Better Leaves Snowed? (OFF, ON)
+    S:renderSnowedLeaves=ON
+
+    # Rising Souls spawn rate. (0.0 - 1.0)
+    S:soulsFXSpawnRate=0.14084508
 
     # Use rounded versions of the vanilla leaf textures? (OFF, ON)
-    S:useRoundedVanillaLeaves=ON
+    S:useRoundedVanillaLeaves=OFF
+
+    # The listed texture names will be linked to an auto generated Better Leaves icon, which will then be used as texture fallback. (e.g. whiteList=leaves_oak, leaves_spruce, leaves_birch)
+    S:whiteList=
 }
 
 
