--- a/config/IC2.cfg
+++ b/config/IC2.cfg
@@ -224,6 +224,7 @@ item {
     I:itemFuelCoalCmpr=29969
     I:itemFuelPlantBall=29968
     I:itemFuelPlantCmpr=29967
+    I:itemFuelRod=29789
     I:itemFuelrod=29789
     I:itemGrinPowder=29850
     I:itemHarz=29961
